# codex_whatcanisay

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release_ops.yml
assets/stimuli/: sample.json
papers/dukejamapediatrics_chang_2021_oi_210017_1627588001.60624.pdf-74180da5-1e4f-4a70-b1d7-621c64e2d0a6/: 416949cb-7a8a-44c6-9793-4eadfb4154b8_content_list.json  416949cb-7a8a-44c6-9793-4eadfb4154b8_model.json  full.md  layout.json
scripts/: fix_gaze_line.py  fix_try_block.py  replace_infer_loop.py
src/app/: __init__.py  main.py  stimulus_player.py
src/core/: __init__.py  calibration.py  metrics.py  tracking.py
src/services/: __init__.py  camera.py  session_logger.py
